<resources>
    <string name="app_name" translatable="false">ProTrip</string>
    <string name="app_desc">Your travel guide</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_info">About</string>
    <string name="action_signOut">Sign out</string>
    <string name="action_rate">Rate this App</string>
    <string name="action_share">Share</string>
    <string name="action_share_app">Share App</string>
    <string name="action_settings">Settings</string>


    <!--Splash screen-->
    <string name="cd_splash_image">ProTrip logo</string>

    <!--Drawer items-->
    <string name="title_feedback">Feedback on ProTrip</string>
    <string name="email_admin">thesabareesh@gmail.com</string>
    <string name="share_app_desc">An easy way to discover new places to visit. Travel like a Pro! #ProTrip https://play.google.com/store/apps/details?id=me.sabareesh.trippie </string>
    <string name="desc_app_version">App version :&#160;</string>
    <string name="desc_device_info">Device info :&#160;</string>
    <string name="title_titlebar_info">Info</string>
    <string name="title_titlebar_privacy_policy">Privacy Policy</string>
    <string name="title_titlebar_favorites">Favorite places</string>
    <string name="site_admin">http://www.sabareesh.me</string>
    <string name="site_privacy_policy">http://sabareesh.me/apps/protrip/privacypolicy.htm</string>
    <string name="cd_user_avatar">User Display picture</string>


    <!--Home screen-->
    <string name="home_search_hint"><font size="10">Where do you want to go?</font></string>
    <string name="error_api">Place selection failed: </string>
    <string name="cd_fab_search">Search</string>
    <string name="cd_current_card">Current Location</string>
    <string name="text_size_home_search" translatable="false">15</string>


    <!--City screen-->
    <string name="cd_city_banner">City banner</string>
    <string name="title_hotel">Hotels</string>
    <string name="title_restaurant">Restaurants</string>
    <string name="title_top_spots">Top spots</string>
    <string name="title_places">Places of Interest</string>
    <string name="title_shopping">Shopping</string>

    <!--places screen-->
    <string name="title_activity_hotels">Hotels</string>

    <!-- place screen-->
    <string name="cd_fab_fav">Favorite</string>
    <string name="title_icon_url">Website</string>
    <string name="title_directions">Directions</string>
    <string name="title_call">Call</string>
    <string name="place_desc"> </string>
    <string name="intent_desc_link">Complete action using</string>
    <string name="intent_desc_share">Share via</string>
    <string name="title_reviews">Top reviews</string>

    <!-- favorites screen-->
    <string name="cd_favs_banner">Favorite places banner</string>
    <string name="title_favorite_places">Favorite places</string>
    <string name="title_no_favs">It looks empty in here.</string>
    <string name="desc_no_favs">Start adding places to your favorites \n by tapping the ♥ icon!</string>
    <string name="title_offline">Internet connection appears to be offline. \n Please try again later !</string>
    <string name="text_retry">Retry</string>


    <!--APp wide -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--shared animations-->
    <string name="transition_image">thumbnail</string>


    <!--Notifications-->
    <string name="notify_failed_location">Unable to get location</string>
    <string name="notify_permission_denied">Allow access to location services to explore nearby places !</string>
    <string name="notify_permission_accepted">Awesome ! Location based suggestions will be shown from now. </string>
    <string name="snackbar_action_allow">I\'M IN</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="notify_favorite">Added to favorites !</string>
    <string name="notify_unfavorite">Removed from favorites !   </string>
    <string name="notify_connection">Connection appears to be offline ! Try again later. </string>

    <!--Alerts-->
    <string name="alert_title_signout_desc">Are you sure?</string>
    <string name="alert_choice_positive_ok">OK</string>
    <string name="alert_choice_positive_signOut">SIGN OUT</string>
    <string name="alert_title_signout">Sign out</string>

    <!--Admob-->
    <string name="banner_ad_unit_id">ca-app-pub-1589330732834822/6070642390</string>
    <string name="admob_banner">BANNER</string>
    <string name="admob_smart_banner">SMART_BANNER</string>
    <string name="admob_loaded">Ad is loaded</string>
    <string name="title_activity_settings">Settings</string>


    <!--Widget-->
    <string name="widget_label" translatable="false">ProTrip</string>
    <string name="appwidget_text" translatable="false">Favorite places</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="rating_divider">/5</string>


    <!--Swipe intro strings-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">ProTrip</string>
    <string name="slide_1_desc">Exploring just got easier ! See more and plan less.</string>

    <string name="slide_2_title">Find restaurants and hotels </string>
    <string name="slide_2_desc">See pictures and reviews of great new places also with driving directions !</string>

    <string name="slide_3_title">Store and sync app data in realtime</string>
    <string name="slide_3_desc">Access your favorite places across all of your devices.</string>

    <string name="slide_4_title">Simple, trusted and secure way to Sign-in</string>
    <string name="slide_4_desc">Signs in with Google, to create more engaging experience.</string>


    <!-- Account strings-->
    <string name="drawer_user_title">Sign In</string>

    <!--Firebase strings-->
    <string name="general_error">An error has occurred.</string>
    <string name="sign_in_default">Sign in</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_signing_up">Signing up…</string>


</resources>
