<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="me.sabareesh.trippie.ui.PlaceDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_city_banner"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:statusBarScrim="@android:color/transparent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/start_margin_collapse"
            app:expandedTitleMarginEnd="@dimen/margin_title_right"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/widePosterBG"
                android:contentDescription="@string/cd_city_banner"
                android:scaleType="centerCrop"
                android:transitionName="thumbnail"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/scrim" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                style="@style/autoscroll"
                app:navigationIcon="@drawable/ic_arrow_back_white_24px" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clipChildren="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="@dimen/pbar_margin"
                android:layout_marginTop="@dimen/pbar_margin"
                android:indeterminate="true"
                android:theme="@style/LinearProgress" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_no_elevation"
                app:cardBackgroundColor="@color/grey">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.5">

                        <RatingBar
                            android:id="@+id/rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_place_start_rating"
                            android:layout_marginStart="@dimen/margin_place_start_rating"
                            android:layout_marginTop="@dimen/margin_place_top_ratings"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize="0.1"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1.75">

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_descbar"
                            android:text="@string/place_desc"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/material_grey" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_no_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/icon_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_iconbar"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/height_top_icons"
                            android:layout_height="@dimen/height_top_icons"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_language_black_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_icon_url"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/icon_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_iconbar"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/height_top_icons"
                            android:layout_height="@dimen/height_top_icons"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_call_black_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_call"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/icon_directions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_iconbar"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/height_top_icons"
                            android:layout_height="@dimen/height_top_icons"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_drive_eta_black_24px" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_directions"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/layout_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/reviews_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    android:paddingTop="@dimen/margin_large"
                    android:text="@string/title_reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:orientation="vertical" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/cd_fab_fav"
        android:visibility="gone"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_favorite_border_white_24px"
        app:useCompatPadding="true"
        tools:targetApi="lollipop" />


</android.support.design.widget.CoordinatorLayout>


